--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "private": true,
   "devDependencies": {
-    "browserify": "^12.0.1",
+    "browserify": "^9.0.4",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.12.0",
@@ -21,6 +21,7 @@
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.4.2",
     "vinyl-source-stream": "^1.1.0",
+    "vinyl-transform": "^1.0.0",
     "yargs": "^3.29.0"
   }
 }
