--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp_serveur",
+  "name": "gulp_server",
   "version": "1.0.0",
   "description": "gulp project for dev environnement",
   "main": "app.js",
@@ -9,6 +9,9 @@
   "keywords": [
     "gulp"
   ],
+  "bin": {
+    "gulp-server": "./bin/GulpServer.js"
+  },
   "author": "lanjuere",
   "license": "ISC",
   "private": true,
@@ -20,6 +23,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.4.2",
+    "path": "^0.12.7",
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0",
     "yargs": "^3.29.0"
