--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.4.2",
     "path": "^0.12.7",
-    "vinyl-source-stream": "^1.1.0",
-    "vinyl-transform": "^1.0.0",
-    "yargs": "^3.29.0"
+    "yargs": "^3.29.0",
+    "stream-browserify": "^2.0.1",
+    "through2": "^2.0.0"
   }
 }
