--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "lanjuere",
   "license": "ISC",
   "private": true,
-  "devDependencies": {
+  "dependencies": {
     "browserify": "^9.0.4",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
@@ -27,8 +27,10 @@
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.4.2",
     "path": "^0.12.7",
-    "yargs": "^3.29.0",
     "stream-browserify": "^2.0.1",
-    "through2": "^2.0.0"
+    "stripify": "^3.0.0",
+    "through2": "^2.0.0",
+    "win-spawn": "^2.0.0",
+    "yargs": "^3.29.0"
   }
 }
