--- a/package.json
+++ b/package.json
@@ -19,20 +19,11 @@
   "license": "ISC",
   "private": true,
   "dependencies": {
-    "browserify": "^9.0.4",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-jshint": "^1.12.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.0",
-    "gulp-uglify": "^1.4.2",
     "path": "^0.12.7",
-    "stream-browserify": "^2.0.1",
-    "stripify": "^3.0.0",
-    "through2": "^2.0.0",
-    "win-spawn": "^2.0.0",
     "yargs": "^3.29.0",
+    "win-spawn": "^2.0.0",
     "ncp": "^2.0.0",
-    "fs": "0.0.2"
+    "fs": "0.0.2",
+    "promise": "7.0.4"
   }
 }
